--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,17 @@ body {
     background: linear-gradient(to right, #E7E9BB, #403B4A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.mobile-container {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 90%;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 1px 2px rgba(0, 0, 0, 0.2);
+    border: 1px #e0e0e0 solid;
+}
+
 img {
     width: 100%;
     height: 830px;
@@ -44,16 +55,6 @@ img {
     position: relative;
 }
 
-.mobile-container {
-    display: flex;
-    flex-direction: column;
-    width: 500px;
-    height: 830px;
-    overflow: hidden;
-    border-radius: 20px;
-    box-shadow: 1px 2px rgba(0, 0, 0, 0.2);
-}
-
 .mobile-nav {
     width: 100%;
     height: 70px;
@@ -78,8 +79,7 @@ img {
     align-items: center;
     height: 100%;
     width: 100%;
-    font-size: 18px;
-    padding: 1rem 1.2rem;
+    font-size: 15px;
     cursor: pointer;
     color: #6d6d6d;
 }
