--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ img {
 
 .mobile-nav {
     width: 100%;
-    height: 70px;
+    height: 60px;
     background-color: #f5f5f5;
 }
 
@@ -79,9 +79,10 @@ img {
     align-items: center;
     height: 100%;
     width: 100%;
-    font-size: 15px;
+    font-size: 14px;
     cursor: pointer;
     color: #6d6d6d;
+    padding-top: 5px;
 }
 
 .nav-item:hover {
