--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ img {
     opacity: 1;
 }
 
+.active {
+    color: #206819;
+}
+
 .image-container {
     overflow: hidden;
     height: 100%;
@@ -70,6 +74,7 @@ img {
     text-decoration: none;
     list-style: none;
     border-radius: 20px;
+    color: #6d6d6d;
 }
 
 .nav-item {
@@ -81,7 +86,6 @@ img {
     width: 100%;
     font-size: 14px;
     cursor: pointer;
-    color: #6d6d6d;
     padding-top: 5px;
 }
 
